@@ -304,28 +304,44 @@ int syn123_setup_sweep( syn123_handle* sh
 /** Set up pink noise generator.
  *  This employs the Gardner/McCartney method to the approximate
  *  the real thing. The number of rows in the tree pattern is tunable.
- *  The result is pink noise with around 2.5 dB/octave.
+ *  The result is pink noise with around 2.5 dB/octave. Do not expect
+ *  more than 32 bits of randomness (or anything;-).
  *  \param sh handle
  *  \param rows rows for the generator algorithm
  *    It maxes out at 30 rows. Below 1 chooses a default.
+ *  \param seed a 32 bit seed value for the pseudo-random number generator
  *  \param period optional address to store the size of the enforced period
  *    (zero for endlessly freshly generated signal)
  *  \return success code
  */
 MPG123_EXPORT
-int syn123_setup_pink(syn123_handle *sh, int rows, size_t *period);
+int syn123_setup_pink( syn123_handle *sh, int rows, unsigned long seed
+,	size_t *period );
+
+/** Set up white noise generator.
+ *  A simple white noise source using some cheap pseudo RNG. Do not
+ *  expect more than 32 bits of randomness (or anything;-).
+ *  \param sh handle
+ *  \param seed a 32 bit seed value for the pseudo-random number generator
+ *  \param period optional address to store the size of the
+ *    enforced period (zero for endlessly freshly generated signal)
+ */
+MPG123_EXPORT
+int syn123_setup_white(syn123_handle *sh, unsigned long seed, size_t *period);
 
 /** Set up Geiger counter simulator.
  *  This models a speaker that is triggered by the pulses from
  *  the Geiger-Mueller counter. That creepy ticking sound.
  *  \param sh handle
  *  \param activity average events per second
+ *  \param seed a 32 bit seed value for the pseudo-random number generator
  *  \param period optional address to store the size of the enforced period
  *    (zero for endlessly freshly generated signal)
  *  \return success code
  */
 MPG123_EXPORT
-int syn123_setup_geiger(syn123_handle *sh, double activity, size_t *period);
+int syn123_setup_geiger( syn123_handle *sh, double activity
+,	unsigned long seed, size_t *period );
 
 /** Set up silence.
  *  This goes back to the vanilla state.
@@ -351,7 +367,7 @@ enum syn123_dither
 {
 	SYN123_DITHER_NONE /**< no dithering, just rounding */
 ,	SYN123_DITHER_TPDF_16BIT /**< TPDF dithering for 16 bit and below */
-,	SYN123_DITHER_TPDF_24BIT /**< TPDF dithering for 12 bit and below */
+,	SYN123_DITHER_TPDF_24BIT /**< TPDF dithering for 24 bit and below */
 };
 
 /** Convert between supported encodings.
@@ -401,8 +417,7 @@ int syn123_conv( void * MPG123_RESTRICT dst, int dst_enc, size_t dst_size
  *  This just returns pow(10, db/20) in the supported range.
  *  The dB value is limited according to SYN123_DB_LIMIT, with
  *  NaN being put at the lower end of the range. Better silent
- *  than insanely loud. Even before dB computation, the linear
- *  volume is limited to be > 0.
+ *  than insanely loud.
  *  \param db relative volume in dB
  *  \return linear volume factor
  */
